--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     ports:
       - "5173:5173"
     volumes:
-      - ./front:/app
+      - ./front.react:/app
       - frontend_node_modules:/app/node_modules
     environment:
       - NODE_ENV=development
