--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ build/
 # IDE and editor files
 .idea/
 .vscode/
+.cursor/
 *.swp
 *.swo
 
@@ -24,3 +25,6 @@ logs/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log* 
+
+*.crt
+*.key
