--- a/front/package.json
+++ b/front/package.json
@@ -1,21 +1,35 @@
 {
-  "name": "cruise-map",
-  "version": "1.0.0",
+  "name": "front",
+  "private": true,
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "geocode": "node utils/geocoding.cjs"
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "earcut": "^2.2.4",
-    "jquery": "^3.7.1",
-    "select2": "^4.1.0-rc.0",
-    "three": "^0.162.0"
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.1.0",
+    "@mui/material": "^7.1.0",
+    "@react-three/drei": "^10.0.8",
+    "@react-three/fiber": "^9.1.2",
+    "earcut": "^3.0.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "three": "^0.176.0"
   },
   "devDependencies": {
-    "esbuild": "0.19.12",
-    "vite": "4.5.2"
+    "@eslint/js": "^9.25.0",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2",
+    "@vitejs/plugin-react": "^4.4.1",
+    "eslint": "^9.25.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
+    "globals": "^16.0.0",
+    "vite": "^6.3.5"
   }
 }
