--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,9 +36,8 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ./config/nginx.dev.conf:/etc/nginx/conf.d/default.conf:ro
-      - ./docker/localhost.crt:/etc/nginx/certs/localhost.crt:ro
-      - ./docker/localhost.key:/etc/nginx/certs/localhost.key:ro
+      - ./config/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./docker/:/etc/nginx/certs/:ro
     depends_on:
       - frontend
       - backend
