--- a/config/nginx.conf.example
+++ b/config/nginx.conf.example
@@ -12,6 +12,7 @@ server {
     ssl_certificate_key /etc/nginx/certs/localhost.key;
 
     location /api/ {
+        rewrite ^/api/(.*)$ /$1 break;
         proxy_pass http://backend:3000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
